<resources>
    <string name="app_name">IntelliFridge</string>
    <string name="action_settings">Settings</string>
    <!-- Tab titles -->
    <string name="section1">Recent</string>
    <string name="section2">My Fridges</string>
    <string name="section3">My Allergies</string>

    <!-- Barcode reader -->
    <string name="scanner_prompt">Scan barcode</string>
    <string name="scan_error">Error scanning barcode!</string>
    <!-- Fetch product info  -->
    <string name="pdMessage">Fetching product information…</string>
    <string name="productNameTitle">Product</string>
    <string name="productQuantityTitle">Quantity</string>
    <string name="BrandsLabel">Brand</string>
    <string name="categoryLabel">Category</string>
    <string name="IngredientsLabel">Ingredients</string>
    <!-- LoginActivity/RegisterActivity -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="create_account_prompt">No account yet? Create one</string>
    <string name="hint_Fname">First Name</string>
    <string name="hint_Lname">Last Name</string>
    <string name="btn_register">Sign Up</string>
    <string name="already_regist">Already have an account? Sign in</string>
    <string name="login_error">Invalid email or password!</string>
    <string name="register_error">Registration Error!</string>
    <string name="db_connect_error">Connection Error! Please try again later</string>
    <string name="field_error">Required field empty!</string>
    <string name="register_success">Registration Successful!</string>

    <!-- Logout -->
    <string name="logout_confirm">Are you sure?</string>
    <string name="logout_positive">Yes</string>
    <string name="logout_negative">No</string>

    <!-- Profile -->
    <string name="location_empty">No location set</string>
    <string name="gender_empty">No gender set</string>
    <!-- Navigation -->
    <string name="action_search">Search</string>
    <string name="action_logout">Logout</string>
    <string name="nav_multiple_input">Multiple input</string>
    <string name="nav_input">Food without barcode</string>
    <string name="nav_subgroup">Misc</string>
    <string name="nav_shop">Shop</string>
    <string name="nav_profile">My Profile</string>
    <string name="nav_allergies">My Allergies</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_contact">Contact</string>
    <string name="nav_about">About</string>

    <!-- Settings -->
    <string name="settings_back">Please use the arrow on the top of screen to apply changes</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings_mod_fridge">Fridge Management</string>
    <string name="mod_fridge_descr_on">Disable the food stock management module</string>
    <string name="mod_fridge_descr_off">Enable the food stock management module</string>
    <string name="settings_mod_allergy">Allergy Scan</string>
    <string name="mod_allergy_descr_on">Disable the allergy scan module</string>
    <string name="mod_allergy_descr_off">Enable the allergy scan module</string>
    <!-- ShopActivity -->
    <string name="title_activity_shop">IntelliFridge Shop</string>
    <string name="fridge_list_empty">You don\'t have any fridge</string>
    <string name="allergy_list_empty">Allergy list is empty! Please try again later</string>
    <string name="action_add_fridge">Add fridge</string>

    <!-- Fridge -->
    <string name="add_fridge_title">Add Fridge</string>
    <string name="add_fridge_message">Name your new fridge</string>
    <string name="add_fridge_addBtn">Add</string>
    <string name="add_fridge_cancelBtn">Cancel</string>
    <string name="add_fridge_success">Fridge successfuly added!</string>
    <string name="add_fridge_error">Error adding fridge! Please try again</string>
    <string name="add_fridge_input_error">Fridge name can\'t be empty!</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>


</resources>
