<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="ovh.intellifridge.intellifridge.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="ovh.intellifridge.intellifridge.SettingsActivity$IntelliFridgePreferenceFragment"
        android:icon="@drawable/ic_fridge_black"
        android:title="@string/app_name" />

    <header
        android:fragment="ovh.intellifridge.intellifridge.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="ovh.intellifridge.intellifridge.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
