<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_action">
       <!-- <item
            android:id="@+id/nav_multiple_input"
            android:title="@string/nav_multiple_input"
            android:icon="@drawable/ic_fridge_black"/> todo -->
        <item
            android:id="@+id/nav_input_ns"
            android:icon="@drawable/ic_local_pizza_black_24px"
            android:title="@string/nav_input_ns" />
        <item
            android:id="@+id/nav_grocery_list"
            android:title="@string/nav_list"
            android:icon="@drawable/ic_list_black_24px"/>
    </group>

    <group android:id="@+id/nav_misc">
        <item
            android:title="@string/nav_shop"
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_shopping_cart_black" />
        <item
            android:title="@string/nav_profile"
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/action_settings" />
    </group>

    <group android:id="@+id/nav_contact_info">
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_email_black_24px"
            android:title="@string/action_contact" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24px"
            android:title="@string/nav_about" />
    </group>
</menu>
