<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ovh.intellifridge.intellifridge.MainActivity">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="30"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="50"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never"/>
</menu>
